Archive2/7a/e967680b9e74f8/output
main.cpp:3:19: error: 'RANDOM' was not declared in this scope
 enum test { Foo = RANDOM, Bar }; 
                   ^
