Archive2/7a/e967680b9e74f8/main.cpp
#include <stdio.h>

enum test { Foo = RANDOM, Bar }; 

int main(void)
{
  enum test foo = Foo;
  enum test bar = Bar;
  printf("foo = %d, bar = %d\n", foo, bar);
}